2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*.spad.pamphlet, src/interp/*.boot:
	Remove most of useless underscores.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polycat.spad.pamphlet,
	src/algebra/poly.spad.pamphlet: Support polynomial
	rings over semirings.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/lisplib.boot: Close $compiler_output_stream.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/forttyp.spad.pamphlet,
	src/algebra/riccati.spad.pamphlet,
	src/interp/nrunfast.boot, src/interp/int-top.boot,
	src/interp/database.boot, src/interp/slam.boot,
	src/interp/nruncomp.boot, src/interp/i-map.boot,
	src/interp/rulesets.boot, src/interp/interop.boot,
	src/interp/c-util.boot, src/interp/setq.lisp,
	src/interp/ax.boot, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/category.boot: Simpler and faster join.
	src/algebra/curve.spad.pamphlet: Adjust.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot: Skip documentation handling
	in bootstrap mode.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot: Correct typo from 1104.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/functor.boot: Fix problem with conditional
	exports from category with no principial ancestor.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/buildom.boot, src/interp/category.boot,
	src/interp/format.boot, src/interp/define.boot:
	Omit unused argument to mkCategory.

2011-07-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Make '**', '^' and '->'
	right-associative.

2011-07-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* compColon: Correct handling of mapping-valued
	functions.
	* src/algebra/riccati.spad.pamphlet: fix junky
	declaration.

2011-07-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
