@@ -1,5 +1,10 @@
 2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/bootfuns.lisp, src/interp/comp.lisp: Move
+	content to src/interp/macros.lisp.
+
+2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/*.spad.pamphlet, src/interp/*.boot:
 	Remove most of useless underscores.
 
